# world-chain-benchmarking

./: .gitignore  Justfile  README.md  catalog-info.yaml  cmd  compare_clients.py  docker-compose.yml  expb.yaml  prometheus.yml  pyproject.toml  running.sh
.github/workflows/: relyance-sci.yml  security-scorecard-deploy.yml
bench/: __init__.py  benchmark.py  cli.py  clients.py  overlay.py  profiling.py  results.py  snapshots.py  utils.py
grafana/provisioning/dashboards/: dashboards.json
grafana/provisioning/datasources/: datasources.yml
scenarios/: reth-mainnet.yaml  worldchain-sepolia.yaml
scripts/: download-snapshots.sh  generate-payloads.sh  run-base-benchmark.sh  run-benchmark.sh  setup.sh  simulate-payloads.sh  verify-blocks.sh
terraform/: .gitignore  Justfile  main.tf  outputs.tf  terraform.tfvars.example  user-data.sh  variables.tf
