[project]
name = "bench"
version = "0.1.0"
description = "Execution client benchmarking CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "boto3>=1.28",
    "rich>=13.0",
    "pandas>=2.3.3",
    "numpy>=2.4.1",
    "matplotlib>=3.10.8",
]

[project.scripts]
bench = "bench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
